style.css
*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: Roboto,sans-serif;
    overflow: hidden;
}

body{
    background-color: #000000;
    
}

.container{
    max-width: 100vw;
    height: 100vh;
    width: 95%;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    padding: 20px 0;
}

.bars_container{
    display: flex;
    flex-direction: row;
    margin-top: 40vh;
    backdrop-filter: blur(20px) saturate(200%);
    -webkit-backdrop-filter: blur(20px) saturate(200%);
    background-color: rgba(17, 25, 40, 0.5);
    border-radius: 12px;
    border: 1px solid rgba(255, 255, 255, 0.125);

}

.bar{
    width: 2vw;
    margin: 0 8px;
    background-color: pink;
    border: 1px solid black;
    border-radius: 0px 0px 5px 5px;
    transition: height 0.5s ease-in-out;
}

.ellipse{
    position: absolute;
    width: 70vw;
    height: 70vw;
    top: 120vh;
    left: 17vw;
    vertical-align: center;
    background: #1EEDA2;
    mix-blend-mode: screen;
    filter: blur(308.518px);
}

button {
    align-items: center;
    appearance: none;
    border-radius: 4px;
    border-style: none;
    box-shadow: rgba(0, 0, 0, .2) 0 3px 1px -2px,rgba(0, 0, 0, .14) 0 2px 2px 0,rgba(0, 0, 0, .12) 0 1px 5px 0;
    box-sizing: border-box;
    cursor: pointer;
    display: inline-flex;
    font-size: .875rem;
    font-weight: 500;
    height: 36px;
    justify-content: center;
    letter-spacing: .0892857em;
    line-height: normal;
    min-width: 64px;
    overflow: visible;
    padding: 0 16px;
    position: relative;
    text-align: center;
    text-transform: uppercase;
    vertical-align: middle;
}

